--- a/roles/aws-cli/vars/main.yml
+++ b/roles/aws-cli/vars/main.yml
@@ -2,7 +2,7 @@
 # vars file for aws-cli
 aws_system_user: ubuntu
 aws_profile: default
-aws_access_key: "enterAccessKeys"
-aws_secret_key: "enterSecretAccessKeys"
+# aws_access_key: "enterAccessKeys"
+# aws_secret_key: "enterSecretAccessKeys"
 aws_region: us-east-1
 aws_format: table
