--- a/.github/workflows/provision-env.yml
+++ b/.github/workflows/provision-env.yml
@@ -12,6 +12,8 @@ jobs:
    env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
    steps:
    - name: Get code
      uses: actions/checkout@v3
@@ -29,9 +31,6 @@ jobs:
         PRIVATE_KEY: ${{ secrets.CICD_PRIVATE_KEY }}
      run: echo "$PRIVATE_KEY" > private_key.pem
    - name: init and apply
-     env:
-        TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        TF_VAR_AWS_SECRET_ACCESS: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
      run: |
           terraform init
           terraform apply -var 'private_key_path=/home/runner/work/dhs_backend_node/dhs_backend_node/private_key.pem' -auto-approve
