--- a/.github/workflows/provision-env.yml
+++ b/.github/workflows/provision-env.yml
@@ -30,7 +30,11 @@ jobs:
      env:
         PRIVATE_KEY: ${{ secrets.CICD_PRIVATE_KEY }}
      run: echo "$PRIVATE_KEY" > private_key.pem
+   - name: echo location
+     run: ls 
+   - name: echo path 
+     run: ls /home/runner/work/dev-env-aws-cicd/
    - name: init and apply
      run: |
           terraform init
-          terraform apply -var 'private_key_path=/home/runner/work/dev-env-aws-cicd/private_key.pem' -auto-approve
+          terraform apply -var 'private_key_path=/home/runner/work/dev-env-aws-cicd/dev-env-aws-cicd/private_key.pem' -auto-approve
