--- a/.github/workflows/provision-env.yml
+++ b/.github/workflows/provision-env.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 jobs:
   terraform:
-   name: "Terraform provision env"
+   name: "Terraform Provision Env"
    runs-on: ubuntu-latest
    env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -34,7 +34,7 @@ jobs:
    - name: Change Private Key permissions
      run: chmod 400 /home/runner/work/dev-env-aws-cicd/dev-env-aws-cicd/private_key.pem
 
-   - name: init and apply
+   - name: init and  apply
      run: |
           terraform init
           terraform apply -var 'private_key_path=/home/runner/work/dev-env-aws-cicd/dev-env-aws-cicd/private_key.pem' -auto-approve
